--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "firebase": "^7.2.1",
+    "slugify": "^1.3.5",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
